[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Interactive/Interactable.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_event.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Interactive/LightPillar/InteractableLightPillar.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Interactive/LightPillar/LightPillarPulse.tres" type="Animation" id=4]

[sub_resource type="SpatialMaterial" id=1]
resource_local_to_scene = true
render_priority = -1
flags_unshaded = true
albedo_color = Color( 1, 0.59, 0.59, 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bar:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bar:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.73 ]
}

[node name="LightPillarInteractable" instance=ExtResource( 1 )]
script = ExtResource( 3 )
interactable_type = 1
interaction_mode = 2

[node name="CollisionShape" parent="ViewColliderArea" index="0"]
disabled = true

[node name="Bar" type="CSGCylinder" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
radius = 0.1
height = 6.0
material = SubResource( 1 )

[node name="Light" type="OmniLight" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
light_color = Color( 1, 0.235294, 0.235294, 1 )
light_energy = 2.73
light_indirect_energy = 2.0
light_specular = 0.585
shadow_enabled = true
omni_range = 10.0
omni_attenuation = 1.7411

[node name="HummingAkEvent" type="Spatial" parent="." index="4"]
script = ExtResource( 2 )
event = {
"Id": 2881812561,
"Name": "DEPOSITPOINT"
}

[node name="DepositAkEvent" type="Spatial" parent="." index="5"]
script = ExtResource( 2 )
event = {
"Id": 3709765322,
"Name": "DEPOSIT1"
}

[node name="PulseAnimationPlayer" type="AnimationPlayer" parent="." index="6"]
anims/Pulse = ExtResource( 4 )
anims/RESET = SubResource( 3 )
